# CAT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  benchmark-blockconf.sh  benchmark_results-A100-cagigas.txt  benchmark_results-A100-global-char.txt  benchmark_results-A100-global-int.txt  benchmark_results-A100-millan-char16x16.txt  benchmark_results-A100-millan-char32x32.txt  benchmark_results-A100-millan-int16x16.txt  benchmark_results-A100-millan-int32x32.txt  benchmark_results-A100-shared-char.txt  benchmark_results-A100-shared-int.txt  benchmark_results-A100-topa-char.txt  benchmark_results-A100-topa-int.txt  benchmark_results-H100-HIGH-cagigas-22.txt  benchmark_results-H100-HIGH-global-char-22.txt  benchmark_results-H100-HIGH-global-int-22.txt  benchmark_results-H100-HIGH-millan-char16x16-22.txt  benchmark_results-H100-HIGH-millan-char32x32-22.txt  benchmark_results-H100-HIGH-millan-int16x16-22.txt  benchmark_results-H100-HIGH-shared-char-22.txt  benchmark_results-H100-HIGH-shared-int-22.txt  benchmark_results-H100-HIGH-tensor-22.txt  benchmark_results-H100-HIGH-topa-char-22.txt  benchmark_results-H100-HIGH-topa-int-22.txt  benchmark_results-H100-cagigas.txt  benchmark_results-H100-global-char.txt  benchmark_results-H100-global-int.txt  benchmark_results-H100-millan-char16x16.txt  benchmark_results-H100-millan-char32x32.txt  benchmark_results-H100-millan-int16x16.txt  benchmark_results-H100-millan-int32x32-22.txt  benchmark_results-H100-millan-int32x32.txt  benchmark_results-H100-millan16x16.txt  benchmark_results-H100-millan32x32.txt  benchmark_results-H100-shared-char.txt  benchmark_results-H100-shared-int.txt  (+30 more)
cost-model/: cat-cost.py
data/: benchmark_results-A100-CAT.txt  benchmark_results-A100-topa.txt  (+43 more)
(+132 files in other folders)
